--- a/app/src/main/res/drawable/profile_edittext.xml
+++ b/app/src/main/res/drawable/profile_edittext.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"
     android:padding="10dp">
 
-    <solid android:color="@color/colorPrimaryLight" />
+    <solid android:color="@color/colorPrimary" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
