--- a/app/src/main/res/layout/fragment_movie_description.xml
+++ b/app/src/main/res/layout/fragment_movie_description.xml
@@ -26,11 +26,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:scaleType="fitXY"
             android:src="@drawable/play_button"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
             app:layout_constraintEnd_toEndOf="@+id/backdrop_image"
-            app:maxImageSize="40dp" />
+            android:layout_gravity="end"
+            android:layout_marginBottom="8dp"
+            android:textColor="@android:color/white"
+            android:backgroundTint="@color/colorAccent"
+            app:maxImageSize="40dp"/>
 
         <LinearLayout
             android:id="@+id/linearLayout1"
