--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,10 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".ui.profile.ProfileFragment"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    tools:context=".ui.profile.ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,10 +20,10 @@
             android:text="Hey, Krishna!"
             android:textColor="@android:color/white"
             android:textSize="24sp"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textStyle="italic"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/profile_page_info"
@@ -34,40 +34,84 @@
             android:text="You may edit your profile details here!"
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcome_textView"
-            android:textStyle="italic"/>
+            app:layout_constraintTop_toBottomOf="@id/welcome_textView" />
 
-        <TextView
-            android:id="@+id/name_textView"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/name_cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_page_info"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
-            android:text="Name"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_page_info" />
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp">
 
-        <EditText
-            android:id="@+id/name_editText"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/name_textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:text="Name"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="5dp"/>
+
+                <EditText
+                    android:id="@+id/name_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@drawable/profile_edittext"
+                    android:padding="8dp"
+                    android:text="Krishna"
+                    android:textColor="@android:color/white"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/gender_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/profile_edittext"
-            android:padding="8dp"
-            android:text="Krishna"
-            android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name_textView" />
+            app:layout_constraintTop_toBottomOf="@id/name_cardView">
+
+            <TextView
+                android:id="@+id/gender_textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1"
+                android:text="Gender"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/gender_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/preference_layout"
@@ -77,7 +121,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name_editText">
+            app:layout_constraintTop_toBottomOf="@id/gender_layout">
 
             <TextView
                 android:id="@+id/preference_textView"
@@ -135,9 +179,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/industry_layout">
@@ -147,6 +191,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/profile_genres_expand"
+                android:padding="8dp"
                 android:text="Genres"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -156,7 +201,7 @@
                 android:id="@+id/hidden_genre_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -168,14 +213,14 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:background="@drawable/profile_edittext"
+                    android:enabled="false"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="Drama"
                     android:textColor="@android:color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/name_textView"
-                    android:enabled="false"/>
+                    app:layout_constraintTop_toBottomOf="@id/name_textView" />
 
                 <EditText
                     android:id="@+id/genre2_editText"
@@ -185,14 +230,14 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:background="@drawable/profile_edittext"
+                    android:enabled="false"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="Science Fiction"
                     android:textColor="@android:color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/name_textView"
-                    android:enabled="false"/>
+                    app:layout_constraintTop_toBottomOf="@id/name_textView" />
 
                 <EditText
                     android:id="@+id/genre3_editText"
@@ -202,24 +247,25 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:background="@drawable/profile_edittext"
+                    android:enabled="false"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="Comedy"
                     android:textColor="@android:color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/name_textView"
-                    android:enabled="false"/>
+                    app:layout_constraintTop_toBottomOf="@id/name_textView" />
 
                 <Button
+                    android:id="@+id/edit_genres"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@drawable/rounded_corner_button"
                     android:text="Edit"
-                    android:layout_marginTop="32dp"
-                    android:textColor="@android:color/white"
-                    android:layout_gravity="center"
-                    android:id="@+id/edit_genres"/>
+                    android:textColor="@android:color/white" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -232,9 +278,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/genres_cardView">
@@ -244,6 +290,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/profile_genres_expand"
+                android:padding="8dp"
                 android:text="Liked Shows"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -253,9 +300,10 @@
                 android:id="@+id/hidden_liked_shows_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginBottom="16dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/liked_shows_recyclerView"
@@ -273,9 +321,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/liked_shows_cardView">
@@ -285,6 +333,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/profile_genres_expand"
+                android:padding="8dp"
                 android:text="Watch Later Shows"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -294,9 +343,10 @@
                 android:id="@+id/hidden_watch_later_shows_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginBottom="16dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/watch_later_shows_recyclerView"
@@ -314,9 +364,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/watch_later_shows_cardView">
@@ -326,6 +376,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/profile_genres_expand"
+                android:padding="8dp"
                 android:text="Liked Movies"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -335,9 +386,10 @@
                 android:id="@+id/hidden_liked_movies_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginBottom="16dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/liked_movies_recyclerView"
@@ -355,9 +407,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardBackgroundColor="@color/colorPrimaryLight"
             app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/liked_movies_cardView">
@@ -367,6 +419,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/profile_genres_expand"
+                android:padding="8dp"
                 android:text="Watch Later Movies"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
@@ -376,9 +429,10 @@
                 android:id="@+id/hidden_watch_later_movies_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_marginBottom="16dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/watch_later_movies_recyclerView"
@@ -389,18 +443,18 @@
         </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/save"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner_button"
-            android:text="Save"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
+            android:background="@drawable/rounded_corner_button"
+            android:text="Save"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/watch_later_movies_cardView"
-            android:id="@+id/save"/>
+            app:layout_constraintTop_toBottomOf="@id/watch_later_movies_cardView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
